Resolves: tdf#63662 'Manual Column Break' always visible...

even when non-printing chars is off.

I think this began as an intermediate step for both page and
column breaks to the header/footer overlay we now have for
page breaks. Leaving this just for column breaks. It may
have been set to always on with page-breaks in mind.

Change-Id: I1617683e2bb8c1f9229e9c2313e7817e184fa5ea